--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             <input type="text" id="c32" placeholder="0">
             <input type="text" id="c33" placeholder="0">
         </div>
-       <button onclick="summAB()">A+B</button>
+       <button onclick="addAB()">A+B</button>
+       <button onclick="multiplyAB()">A*B</button>
     </div>
     <script src="matrix.js"></script>
 </body>
