--- a/index.html
+++ b/index.html
@@ -44,8 +44,12 @@
             <input type="text" id="c32" placeholder="0">
             <input type="text" id="c33" placeholder="0">
         </div>
-       <button onclick="addAB()">A+B</button>
-       <button onclick="multiplyAB()">A*B</button>
+        <div class="butt">
+            <button onclick="addAB()">A+B</button>
+            <button onclick="multiplyAB()">A*B</button>
+            <button onclick="multA()">A*a</button>
+            <input type="text" id="display">
+       </div>
     </div>
     <script src="matrix.js"></script>
 </body>
